--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "serve": "nodemon -w server.js server.js",
     "test": "jest",
     "watch": "rollup -c -w",
-    "postinstall": "yarn run build"
+    "postinstall": "yarn run build",
+    "start":"set NODE_ENV=production&&node server.js"
   },
   "dependencies": {
     "@babel/core": "^7.2.2",
